fixed overlapping divs in AgendaCard

--- a/app/style/AgendaCard.less
+++ b/app/style/AgendaCard.less
@@ -105,7 +105,7 @@
 
 .agenda-card-bottom-cfg {
   height: 80px;
-  margin-bottom: 20px;
+  margin-bottom: 55px;
   float: left;
   color: #596d81;
 }
